rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest
spec:
  type: NodePort
  selector:
    app: rest
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30620
